# sabi

./: .env.example  .gitignore  Cargo.toml  Containerfile  Makefile  README.md  docker-compose.yaml  senjin.http  watch.sh
api/: .env.example  Cargo.toml  Containerfile  senjin.http
api/src/: config.rs  handlers.rs  main.rs  middleware.rs
api/src/services/: mod.rs
api/src/services/auth/: auth_dto.rs  auth_routes.rs  mod.rs  oauth.rs
api/src/services/goodbye/: goodbye_routes.rs  mod.rs
api/tests/: goodbye_test.rs  health_test.rs  hello_test.rs  not_found_test.rs
api/tests/common/: mod.rs
src/: config.rs  errors.rs  handlers.rs  main.rs  memory_store.rs  middlewares.rs  models.rs
src/services/: goodbye_service.rs  health_service.rs  hello_service.rs  mod.rs
src/services/auth/: auth_dto.rs  auth_routes.rs  mod.rs
src/services/goodbye/: goodbye_dto.rs  goodbye_routes.rs
src/services/hello/: hello_dto.rs  hello_routes.rs  mod.rs
tests/: config_tests.rs  errors_tests.rs  goodbye.rs  goodbye_service.rs  goodbye_test.rs  handlers_tests.rs  health.rs  health_service.rs  hello.rs  hello_service.rs  hello_test.rs  not_found.rs  not_found_test.rs
tests/common/: mod.rs
utils/: Cargo.toml
