[package]
name = "senjin"
version = "0.1.0"
authors = ["Dario Blanco Iturriaga <dblancoit@gmail.com>"]
edition = "2021"

[dependencies]
actix-web = "4"
actix-rt = "2"
env_logger = "0.8"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
dotenv = "0.15"

[dev-dependencies]
serde_json = "1.0"

[lib]
name = "senjin"
path = "src/main.rs"
