[package]
name = "sabi"
version = "0.1.0"
authors = ["Dario Blanco Iturriaga <dblancoit@gmail.com>"]
edition = "2021"

[dependencies]
async-session = "3.0.0"
async-trait = "0.1"
axum = { version = "0.6", features = ["headers"] }
derive_more = "0.99.17"
dotenv = "0.15"
env_logger = "0.10.0"
headers = "0.3"
http = "0.2"
hyper = { version = "0.14", features = ["full"] }
ngrok = { version = "0.11", features = ["axum"] }
oauth2 = "4.3"
redis = { version = "0.23", features = ["aio", "tokio-comp"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[dev-dependencies]
serde_json = "1.0"

[lib]
name = "sabi"
path = "src/main.rs"
